improvement: allow wrap text presented as customer name (visual fixes)

--- a/css/style.less
+++ b/css/style.less
@@ -2477,5 +2477,7 @@ fieldset {
 		display: inline-block;
 		white-space: normal;
 		vertical-align: middle;
+		padding-left: 0.5em;
+		padding-right: 0.5em;
 	}
 }
